Added some component and route

--- a/dashpress-app/src/app/app.component.html
+++ b/dashpress-app/src/app/app.component.html
@@ -1,7 +1,11 @@
-<header>
+<div class="app">
+    <header>
 
-</header>
-<main>
-    <app-sidebar />
-</main>
-<footer>
+    </header>
+    <main>
+        <app-sidebar />
+    </main>
+    <footer>
+        
+    </footer>
+</div>
