Added component and dashboard routes

--- a/dashpress-app/src/app/dashboard/dashboard.component.html
+++ b/dashpress-app/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,9 @@
-<p>dashboard works!</p>
+<div class="container-fluid p-0 m-0 dashboard">
+    <app-title text="Dashboard"/>
+    <app-text
+    text="Drag and drop a JSON file or select import type to visualize your data" 
+    color="#EABEFA"/>
+    <div class="pt-20">
+        <router-outlet />
+    </div>
+</div>
