--- a/dashpress-app/src/app/sidebar/link/link.component.css
+++ b/dashpress-app/src/app/sidebar/link/link.component.css
@@ -1,4 +1,5 @@
 .link {
+    position: relative;
     min-height: 100px;
     display: flex;
     flex-direction: column;
@@ -6,18 +7,41 @@
     text-align: center;
     align-items: center;
     color: rgb(168, 168, 168);
-    border: 2px solid transparent;
     font-size: 14px;
     row-gap: 10px;
-    transition: all 0.4s ease;
     cursor: pointer;
+    transition: all 0.4s ease;
 }
 
+/* Bordo animato */
+.link::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 2px;
+    height: 0%;
+    background-color: white;
+    transform: translateY(-50%);
+    transform-origin: center;
+}
+
+/* Quando .active viene aggiunta, parte animazione */
+.link.active::before {
+    animation: border-grow 0.15s ease forwards;
+}
+
+/* Hover effect sul testo */
 .link:hover {
     color: white;
 }
 
-.active {
-    border-left: 2px solid white;
-    transition: all 0.3s ease;
+@keyframes border-grow {
+    0% {
+        height: 0%;
+    }
+
+    100% {
+        height: 100%;
+    }
 }
