Update dashboard setup components

--- a/dashpress-app/src/app/ui/buttons/button-outline/button-outline.component.css
+++ b/dashpress-app/src/app/ui/buttons/button-outline/button-outline.component.css
@@ -1,6 +1,7 @@
 :host {
     position: relative;
     text-decoration: none;
+    min-width: 120px;
     color: #fff;
     background: linear-gradient(45deg, #f4bcbc, #FCBFE8, #dab3ff);
     padding: 8px 18px;
