--- a/dashpress-app/src/app/dashboard/setup/order-type/order-type.component.html
+++ b/dashpress-app/src/app/dashboard/setup/order-type/order-type.component.html
@@ -1,13 +1,4 @@
 <section>
     <app-text text="Select the data order type." />
-    <div class="dropdown">
-        <button data-toggle="dropdown" appBtnOutline>
-            {{ order() }}
-        </button>
-        <div class="dropdown-menu">
-            @for (type of types; track $index) {
-                <a [routerLink]="['./']" [queryParams]="{order: type}" class="dropdown-item">{{ type }}</a>
-            }
-        </div>
-    </div>
+    <app-dropdown [routerLink]="['./']" [queryParams]="{order}" [items]="types()" [(text)]="order"/>
 </section>
