Added some dashboard table component and fix some code

--- a/dashpress-app/src/app/dashboard/dashboard.component.html
+++ b/dashpress-app/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0 m-0 dashboard">
     <app-title text="Dashboard"/>
     <app-text
-    text="Drag and drop a JSON file or select import type to visualize your data" 
+    text="Visualize your data" 
     color="#EABEFA"/>
     <div class="pt-10">
         <router-outlet />
