--- a/dashpress-app/src/app/sidebar/sidebar.component.html
+++ b/dashpress-app/src/app/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
       <ul class="space-y-2 font-medium">
          @for (link of links(); track link.routerLink) {
             <li>
-               <app-link [link]="link" />
+               <app-sidebar-link [link]="link" />
             </li>
          }
       </ul>
