Added table component without script yet

--- a/dashpress-app/src/app/dashboard/setup/request/request.component.html
+++ b/dashpress-app/src/app/dashboard/setup/request/request.component.html
@@ -2,6 +2,6 @@
     <app-text text="GET request to your data" />
     <div class="row m-0 gap-4">
         <input class="col-md-2" type="text" appInputOutline placeholder="Here your url">
-        <button [routerLink]="['/table']" class="col-md-1" appBtnOutline>Confirm</button>
+        <button routerLink="../table" class="col-md-1" appBtnOutline>Confirm</button>
     </div>
 </section>
