Update table component

--- a/dashpress-app/src/app/dashboard/setup/select-file/select-file.component.html
+++ b/dashpress-app/src/app/dashboard/setup/select-file/select-file.component.html
@@ -1,7 +1,7 @@
 <section>
     <app-text text="Choose a json file from your device" />
     <button appBtnOutline>
-        <input type="file" class="inputFile" accept=".json" #inputFile>
+        <input (change)="readFirstFileContent($event)" type="file" class="inputFile" accept=".json" #inputFile>
         Select file
     </button>
 </section>
