--- a/dashpress-app/src/app/dashboard/setup/select-file/select-file.component.html
+++ b/dashpress-app/src/app/dashboard/setup/select-file/select-file.component.html
@@ -1,6 +1,6 @@
 <section>
     <app-text text="Choose a json file from your device" />
-    <button appBtnOutline>
+    <button appBtn>
         <input (change)="readFirstFileContent($event)" type="file" class="inputFile" accept=".json" #inputFile>
         Select file
     </button>
